add chipseq workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
 *
-!scripts
-!scripts/*
-!scripts/common
-!scripts/common/*
-scripts/.snakemake*
-!Snakefile
-!config.yaml
-!samples.tsv
+!workflow
+!workflow/scripts
+!workflow/scripts/*
+workflow/scripts/.snakemake*
+!workflow/Snakefile
+!config/*
+#!config/config.yaml
+#!samples.tsv
 !resources
 !resources/*
-!envs
-!envs/*
-!environment.yaml
-!LICENSE
+!workflow/envs
+!workflow/envs/*
+#!environment.yaml
+#!LICENSE
 !README.md
-!rules
-!rules/*
+!workflow/rules
+!workflow/rules/*
 !.gitignore
 !.editorconfig
 !.gitattributes
