Add params to config file

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -31,6 +31,8 @@ spikeIn_genome:
 
 # changes to rule paramters ---------------------------------------------------------------
 params:
-  cutadapt-pe: ""
-  cutadapt-se: ""
-  star: ""
+  bowtie2_index: ""
+  bowtie2_align: "-k 2 --very-sensitive --no-mixed --no-discordant -X 5000"
+#   filter_multireads: "-bh -q 30"
+  bigwigs_ind: "--binSize 10"
+  bigwigs_merged: "--binSize 10"
