--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,3 +35,7 @@ params:
   filter_multireads: "-f bam -F '(mapping_quality >= 30) and ([XS] == null)'" 
   bigwigs_ind: "--binSize 10"
   bigwigs_merged: "--binSize 10"
+  macs2_call_peaks_narrow_se: "-f BAM -g dm --call-summits"
+  macs2_call_peaks_broad_se: "-f BAM -g dm"
+  macs2_call_peaks_narrow_pe: "-f BAMPE -g dm --call-summits"
+  macs2_call_peaks_broad_pe: "-f BAMPE -g dm"
