add peak calling rules

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,15 +18,6 @@ ref_genome:
   name: dm6
   link: https://hgdownload.soe.ucsc.edu/goldenPath/dm6/bigZips/dm6.fa.gz
 
-# spike-in genome options ------------------------------------------------------------------
-use_spikeIn: False
-
-spikeIn_genome:
-  name: yeast_w303
-  link: http://sgd-archive.yeastgenome.org/sequence/strains/W303/W303_SGD_2015_JRIU00000000/W303_SGD_2015_JRIU00000000.fsa.gz
-
-
-
 
 # changes to rule paramters ---------------------------------------------------------------
 params:
@@ -35,7 +26,5 @@ params:
   filter_multireads: "-f bam -F '(mapping_quality >= 30) and ([XS] == null)'" 
   bigwigs_ind: "--binSize 10"
   bigwigs_merged: "--binSize 10"
-  macs2_call_peaks_narrow_se: "-f BAM -g dm --call-summits"
-  macs2_call_peaks_broad_se: "-f BAM -g dm"
-  macs2_call_peaks_narrow_pe: "-f BAMPE -g dm --call-summits"
-  macs2_call_peaks_broad_pe: "-f BAMPE -g dm"
+  macs2_call_atac_peaks_ind: "-f BAMPE --keep-dup all -g dm --call-summits"
+  macs2_call_atac_peaks_merged: "-f BAMPE --keep-dup all -g dm --call-summits"
