add use_spikeIn option to config to avoid error

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,6 +18,7 @@ ref_genome:
   name: dm6
   link: https://hgdownload.soe.ucsc.edu/goldenPath/dm6/bigZips/dm6.fa.gz
 
+use_spikeIn: False
 
 # changes to rule paramters ---------------------------------------------------------------
 params:
