--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,6 +20,21 @@ ref_genome:
 
 use_spikeIn: False
 
+# DESeq2 options -------------------------------------------------------------------------
+run_diff_accessibility: TRUE
+diff_exp:
+  experiments:
+    GAF_ATACseq:
+      # contrasts for the deseq2 results method
+      contrasts:
+        degrad-vs-control:
+          - degrad
+          - control
+  model: ~condition
+  count_threshold: 50
+  padj_cutoff: 0.05
+  log2FC_cutoff: 1
+
 # changes to rule paramters ---------------------------------------------------------------
 params:
   bowtie2_index: ""
